@@ -1,3 +1,7 @@
+2013-12-07  Corinna Vinschen  <corinna@vinschen.de>
+
+	* new-features.xml (ov-new1.7.26): Add new section.
+
 2013-11-29  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.xml (ov-new1.7.26): Fix section ID and title.  Add
